[package]
name = "moshudp"
version = "0.1.4"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/vi/moshudp"
description = "Alternative simplistic UDP-based session establisher for mosh-client and mosh-server."
keywords = ["mosh", "ssh", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
argh = "0.1.7"
bincode = "1.3.3"
chacha20poly1305 = "0.9.0"
fxhash = "0.2.1"
generic-array = "0.14.4"
getrandom = {version="0.2.6", features=["std"]}
gumdrop = "0.8.1"
nix = "0.23.1"
serde = { version = "1.0.136", features = ["derive"] }
